--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -6,7 +6,11 @@ packages:
       - "jq"
       - "fzf"
       - "fastfetch"
-      - "fish"
+      - "zsh"
+      - "zsh-autocomplete"
+      - "zsh-syntax-highlighting"
+      - "zsh-autosuggestions"
+      - "jandedobbeleer/oh-my-posh/oh-my-posh"
     cask:
       - "1password-cli"
     apt:
@@ -16,7 +20,7 @@ packages:
       - "jq"
       - "fzf"
       - "fastfetch"
-      - "fish"
+      - "zsh"
   work:
     brew:
       - "neovim"
@@ -24,8 +28,7 @@ packages:
       - "bat"
       - "chafa"
       - "ripgrep"
-      - "zsh"
-      - "jandedobbeleer/oh-my-posh/oh-my-posh"
+      - "tldr"
     cask:
       - "wezterm"
       - "obsidian"
@@ -40,7 +43,6 @@ packages:
       - "chafa"
       - "tldr"
       - "ripgrep"
-      - "jandedobbeleer/oh-my-posh/oh-my-posh"
     cask:
       - "font-fira-code-nerd-font"
       - "font-geist-mono-nerd-font"
