--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,16 +1,37 @@
 set -g mouse on
 set -s escape-time 0
 set -g focus-events on
-# set -g status-left '#{?client_prefix,#[bg=colour245 fg=colour233 bold],#[fg=colour155]} (#S)'
+
 bind '"' split-window -h
 bind '%' split-window -v
+
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
-bind -n C-h select-pane -L
-bind -n C-l select-pane -R
-bind -n C-k select-pane -U
-bind -n C-j select-pane -D
 
+# decide whether we're in a Vim process
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -n 'C-Space' if-shell "$is_vim" 'send-keys C-Space' 'select-pane -t:.+'
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
+bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 # DESIGN TWEAKS
 set -g visual-activity off
 set -g visual-bell on
@@ -18,48 +39,27 @@ set -g visual-silence off
 setw -g monitor-activity off
 set -g bell-action none
 
-# clock mode
-setw -g clock-mode-colour yellow
-
-# copy mode
-setw -g mode-style 'fg=black bg=red bold'
-
-# panes
-set -g pane-border-style 'fg=red'
-set -g pane-active-border-style 'fg=yellow'
-
 # statusbar
 set -g status-position top
-set -g status-justify left
-set -g status-style 'fg=blue'
-
-set -g status-left ''
-set -g status-left-length 10
-
-set -g status-right-style 'fg=blue bg=black'
-set -g status-right '%Y-%m-%d %H:%M '
-set -g status-right-length 50
-
-setw -g window-status-current-style 'fg=blue bg=black'
-setw -g window-status-current-format ' #I #W #F '
-
-setw -g window-status-style 'fg=red bg=black'
-setw -g window-status-format ' #I #[fg=white]#W #[fg=yellow]#F '
-
-setw -g window-status-bell-style 'fg=yellow bg=red bold'
-
-# messages
-set -g message-style 'fg=yellow bg=red bold'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @tokyo-night-tmux_transparent 1
+set -g @tokyo-night-tmux_window_id_style digital
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
+# Icon styles
+set -g @tokyo-night-tmux_terminal_icon 
+set -g @tokyo-night-tmux_active_terminal_icon 
+set -g @tokyo-night-tmux_show_path 1
+set -g @tokyo-night-tmux_path_format relative # 'relative' or 'full'
+# No extra spaces between icons
+set -g @tokyo-night-tmux_window_tidy_icons 0
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+set -g @tokyo-night-tmux_show_battery_widget 1
+set -g @tokyo-night-tmux_battery_low_threshold 21 # default
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
