--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -79,6 +79,39 @@ automatically-unhide-macos-hidden-apps = false
     ctrl-alt-shift-cmd-k = 'focus up'
     ctrl-alt-shift-cmd-l = 'focus right'
 
+    # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
+    ctrl-alt-shift-cmd-1 = [ 'workspace 1', 'mode main' ]
+    ctrl-alt-shift-cmd-2 = [ 'workspace 2', 'mode main' ]
+    ctrl-alt-shift-cmd-3 = [ 'workspace 3', 'mode main' ]
+    ctrl-alt-shift-cmd-4 = [ 'workspace 4', 'mode main' ]
+    ctrl-alt-shift-cmd-5 = [ 'workspace 5', 'mode main' ]
+    ctrl-alt-shift-cmd-6 = [ 'workspace 6', 'mode main' ]
+    ctrl-alt-shift-cmd-7 = [ 'workspace 7', 'mode main' ]
+    ctrl-alt-shift-cmd-8 = [ 'workspace 8', 'mode main' ]
+    ctrl-alt-shift-cmd-9 = [ 'workspace 9', 'mode main' ]
+    # In your config, you can drop workspace bindings that you don't need
+    ctrl-alt-shift-cmd-a = [ 'workspace A', 'mode main' ]
+    ctrl-alt-shift-cmd-b = [ 'workspace B', 'mode main' ]
+    ctrl-alt-shift-cmd-c = [ 'workspace C', 'mode main' ]
+    ctrl-alt-shift-cmd-d = [ 'workspace D', 'mode main' ]
+    ctrl-alt-shift-cmd-e = [ 'workspace E', 'mode main' ]
+    ctrl-alt-shift-cmd-f = [ 'workspace F', 'mode main' ]
+    ctrl-alt-shift-cmd-g = [ 'workspace G', 'mode main' ]
+    ctrl-alt-shift-cmd-i = [ 'workspace I', 'mode main' ]
+    ctrl-alt-shift-cmd-m = [ 'workspace M', 'mode main' ]
+    ctrl-alt-shift-cmd-n = [ 'workspace N', 'mode main' ]
+    ctrl-alt-shift-cmd-o = [ 'workspace O', 'mode main' ]
+    ctrl-alt-shift-cmd-p = [ 'workspace P', 'mode main' ]
+    ctrl-alt-shift-cmd-q = [ 'workspace Q', 'mode main' ]
+    ctrl-alt-shift-cmd-r = [ 'workspace R', 'mode main' ]
+    ctrl-alt-shift-cmd-s = [ 'workspace S', 'mode main' ]
+    ctrl-alt-shift-cmd-t = [ 'workspace T', 'mode main' ]
+    ctrl-alt-shift-cmd-u = [ 'workspace U', 'mode main' ]
+    ctrl-alt-shift-cmd-v = [ 'workspace V', 'mode main' ]
+    ctrl-alt-shift-cmd-w = [ 'workspace W', 'mode main' ]
+    ctrl-alt-shift-cmd-x = [ 'workspace X', 'mode main' ]
+    ctrl-alt-shift-cmd-y = [ 'workspace Y', 'mode main' ]
+    ctrl-alt-shift-cmd-z = [ 'workspace Z', 'mode main' ]
     # All possible keys:
     # - Letters.        a, b, c, ..., z
     # - Numbers.        0, 1, 2, ..., 9
@@ -193,6 +226,8 @@ automatically-unhide-macos-hidden-apps = false
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
     alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
+    alt-f = [ 'fullscreen', 'mode main' ]
+
 # 'service' binding mode declaration.
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
 [mode.service.binding]
@@ -210,3 +245,10 @@ automatically-unhide-macos-hidden-apps = false
     alt-shift-k = ['join-with up', 'mode main']
     alt-shift-l = ['join-with right', 'mode main']
 
+[[on-window-detected]]
+if.app-id = 'com.microsoft.Outlook'
+run = 'move-node-to-workspace O'
+
+[[on-window-detected]]
+if.app-id = 'com.microsoft.teams2'
+run = 'move-node-to-workspace T'
