--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -9,6 +9,7 @@ clipboard-write = allow
 background-opacity = 0.85
 background-blur-radius = 20
 unfocused-split-opacity = 0.7
+macos-option-as-alt = true
 palette = 0=#1b1d2b
 palette = 1=#ff757f
 palette = 2=#c3e88d
