Add nnn and yazi as core packages

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -21,6 +21,8 @@ packages:
       - "pngpaste"
       - "zoxide"
       - "tmux"
+      - "nnn"
+      - "yazi"
     cask:
       - "1password-cli"
 
