--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -46,8 +46,8 @@ set -g status-position top
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @tokyo-night-tmux_transparent 1
-set -g @tokyo-night-tmux_window_id_style digital
-set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_window_id_style super
+set -g @tokyo-night-tmux_pane_id_style hide
 set -g @tokyo-night-tmux_zoom_id_style dsquare
 # Icon styles
 set -g @tokyo-night-tmux_terminal_icon 
@@ -59,7 +59,14 @@ set -g @tokyo-night-tmux_window_tidy_icons 0
 
 set -g @tokyo-night-tmux_show_battery_widget 1
 set -g @tokyo-night-tmux_battery_low_threshold 21 # default
+set -g @tokyo-night-tmux_show_wbg 0
+set -g @tokyo-night-tmux_show_git 0
 
+# misc options
+set -g pane-border-lines simple
+set -g base-index 1
+setw -g pane-base-index 1
+set -g renumber-windows on
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
