--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,6 +1,7 @@
 set -g mouse on
 set -s escape-time 0
 set -g focus-events on
+set -g allow-passthrough all
 
 bind '"' split-window -h -c "#{pane_current_path}"
 bind '%' split-window -v -c "#{pane_current_path}"
@@ -46,6 +47,7 @@ set -g status-position top
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @tokyo-night-tmux_theme storm
 set -g @tokyo-night-tmux_transparent 1
 set -g @tokyo-night-tmux_window_id_style super
 set -g @tokyo-night-tmux_pane_id_style hide
