--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -62,8 +62,11 @@ set -g @tokyo-night-tmux_window_tidy_icons 0
 
 set -g @tokyo-night-tmux_show_battery_widget 1
 set -g @tokyo-night-tmux_battery_low_threshold 21 # default
+set -g @tokyo-night-tmux_show_netspeed 1
+set -g @tokyo-night-tmux_netspeed_refresh 1 
 set -g @tokyo-night-tmux_show_wbg 0
 set -g @tokyo-night-tmux_show_git 0
+set -g @tokyo-night-tmux_show_datetime 0
 
 # misc options
 set -g pane-border-lines simple
