--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,7 +1,9 @@
 set -g mouse on
 set -s escape-time 0
 set -g focus-events on
-set -g allow-passthrough all
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 
 bind '"' split-window -h -c "#{pane_current_path}"
 bind '%' split-window -v -c "#{pane_current_path}"
