add ice menubar app and only have gemini for home useage

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -57,6 +57,7 @@ packages:
       - "nikitabobko/tap/aerospace"
       - "ghostty"
       - "marta"
+      - "jordanbaird-ice"
   home:
     brew:
       - "neovim"
@@ -75,6 +76,7 @@ packages:
       - "nikitabobko/tap/aerospace"
       - "ghostty"
       - "marta"
+      - "jordanbaird-ice"
   server:
     brew:
       - "screen"
