--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -10,7 +10,7 @@ after-login-command = []
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = [
-  'exec-and-forget borders active_color=0xffff5733 inactive_color=0xff494d64 width=5.0'
+  'exec-and-forget borders active_color=0xff2fdaff inactive_color=0xff494d64 width=5.0'
 ]
 # Start AeroSpace at login
 start-at-login = true 
@@ -58,8 +58,8 @@ automatically-unhide-macos-hidden-apps = false
 #                 See:
 #                 https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
 [gaps]
-    inner.horizontal = 2
-    inner.vertical =   2
+    inner.horizontal = 15
+    inner.vertical =   15
     outer.left =       2
     outer.bottom =     2
     outer.top =        2
