--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -48,27 +48,47 @@ set -g status-position top
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin "janoamaral/tokyo-night-tmux"
-set -g @tokyo-night-tmux_theme storm
-set -g @tokyo-night-tmux_transparent 1
-set -g @tokyo-night-tmux_window_id_style super
-set -g @tokyo-night-tmux_pane_id_style hide
-set -g @tokyo-night-tmux_zoom_id_style dsquare
-# Icon styles
-set -g @tokyo-night-tmux_terminal_icon 
-set -g @tokyo-night-tmux_active_terminal_icon 
-set -g @tokyo-night-tmux_show_path 1
-set -g @tokyo-night-tmux_path_format relative # 'relative' or 'full'
-# No extra spaces between icons
-set -g @tokyo-night-tmux_window_tidy_icons 0
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_window_status_style "custom"
 
-set -g @tokyo-night-tmux_show_battery_widget 1
-set -g @tokyo-night-tmux_battery_low_threshold 21 # default
-set -g @tokyo-night-tmux_show_netspeed 1
-set -g @tokyo-night-tmux_netspeed_refresh 1 
-set -g @tokyo-night-tmux_show_wbg 0
-set -g @tokyo-night-tmux_show_git 0
-set -g @tokyo-night-tmux_show_datetime 0
+set -g @catppuccin_window_left_separator "#[bg=default,fg=#{@thm_surface_0}]#[bg=#{@thm_surface_0},fg=#{@thm_fg}]"
+set -g @catppuccin_window_right_separator "#[bg=default,fg=#{@thm_surface_0}]"
+set -g @catppuccin_window_current_left_separator "#[bg=default,fg=#{@thm_mauve}]#[bg=#{@thm_mauve},fg=#{@thm_bg}]"
+set -g @catppuccin_window_current_middle_separator "#[fg=#{@thm_mauve}]█"
+set -g @catppuccin_window_current_right_separator "#[bg=default,fg=#{@thm_surface_1}]"
+set -g @catppuccin_status_background "none"
+run '~/.tmux/plugins/tmux/catppuccin.tmux'
+# Load catppuccin
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left "#{E:@catppuccin_status_session}"
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+# set -g @plugin "janoamaral/tokyo-night-tmux"
+# set -g @tokyo-night-tmux_theme storm
+# set -g @tokyo-night-tmux_transparent 1
+# set -g @tokyo-night-tmux_window_id_style super
+# set -g @tokyo-night-tmux_pane_id_style hide
+# set -g @tokyo-night-tmux_zoom_id_style dsquare
+# # Icon styles
+# set -g @tokyo-night-tmux_terminal_icon 
+# set -g @tokyo-night-tmux_active_terminal_icon 
+# set -g @tokyo-night-tmux_show_path 1
+# set -g @tokyo-night-tmux_path_format relative # 'relative' or 'full'
+# # No extra spaces between icons
+# set -g @tokyo-night-tmux_window_tidy_icons 0
+#
+# set -g @tokyo-night-tmux_show_battery_widget 1
+# set -g @tokyo-night-tmux_battery_low_threshold 21 # default
+# set -g @tokyo-night-tmux_show_netspeed 1
+# set -g @tokyo-night-tmux_netspeed_refresh 1 
+# set -g @tokyo-night-tmux_show_wbg 0
+# set -g @tokyo-night-tmux_show_git 0
+# set -g @tokyo-night-tmux_show_datetime 0
 
 # misc options
 set -g pane-border-lines simple
