Update .config/catppuccin_mocha.omp.json Add .config/lsd/colors.yaml Add .config/lsd/config.yaml Update .tmux.conf Update .zshrc

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -57,17 +57,28 @@ set -g @catppuccin_window_status_style "custom"
 set -g @catppuccin_window_left_separator "#[bg=default,fg=#{@thm_surface_0}]#[bg=#{@thm_surface_0},fg=#{@thm_fg}]"
 set -g @catppuccin_window_right_separator "#[bg=default,fg=#{@thm_surface_0}]"
 set -g @catppuccin_window_current_left_separator "#[bg=default,fg=#{@thm_mauve}]#[bg=#{@thm_mauve},fg=#{@thm_bg}]"
-set -g @catppuccin_window_current_middle_separator "#[fg=#{@thm_mauve}]█"
+set -g @catppuccin_window_flags "icon"
+set -g @catppuccin_window_flags_icon_last "" # -
+set -g @catppuccin_window_flags_icon_current "" # *
+set -g @catppuccin_window_number "#I "
+set -g @catppuccin_window_current_number "#I"
+# set -g @catppuccin_window_current_middle_separator "#[fg=#{@thm_mauve}]█"
+set -g @catppuccin_window_current_middle_separator " "
 set -g @catppuccin_window_current_right_separator "#[bg=default,fg=#{@thm_surface_1}]"
 set -g @catppuccin_status_background "none"
+set -g @catppuccin_window_text "#W : #{b:pane_current_path}"
+set -g @catppuccin_window_current_text " #W"
+set -g @catppuccin_status_right_separator "#[bg=default,fg=#{@thm_surface_0}] "
 run '~/.tmux/plugins/tmux/catppuccin.tmux'
 # Load catppuccin
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left "#{E:@catppuccin_status_session}"
+set -agF status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
 set -agF status-right "#{E:@catppuccin_status_cpu}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
+# set -g set-titles on
 # set -g @plugin "janoamaral/tokyo-night-tmux"
 # set -g @tokyo-night-tmux_theme storm
 # set -g @tokyo-night-tmux_transparent 1
