Add .gitmux.conf Update .tmux.conf

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -75,7 +75,8 @@ set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left "#{E:@catppuccin_status_session}"
 set -agF status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
+set -gF status-right "#{@catppuccin_status_gitmux}"
+set -agF status-right "#{E:@catppuccin_status_application}"
 set -agF status-right "#{E:@catppuccin_status_cpu}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
 # set -g set-titles on
