--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -10,7 +10,7 @@ after-login-command = []
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = [
-  'exec-and-forget borders active_color=0xff2fdaff inactive_color=0xff494d64 width=5.0'
+  'exec-and-forget borders active_color=0xff94e2d5 inactive_color=0xff11111b width=5.0'
 ]
 # Start AeroSpace at login
 start-at-login = true 
