Update .chezmoidata/packages.yaml Update .aerospace.toml Add .config/nvim-light/init.lua Update .zshrc

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -19,10 +19,9 @@ packages:
       - "glab"
       - "gsed"
       - "pngpaste"
-      - "zoxide"
       - "tmux"
-      - "nnn"
       - "yazi"
+      - "abduco"
     cask:
       - "1password-cli"
 
