--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -178,19 +178,19 @@ automatically-unhide-macos-hidden-apps = false
     alt-shift-k = ['join-with up', 'mode main']
     alt-shift-l = ['join-with right', 'mode main']
 
-    ctrl-alt-shift-cmd-1 = [ 'summon-workspace 1', 'mode main' ]
-    ctrl-alt-shift-cmd-2 = [ 'summon-workspace 2', 'mode main' ]
-    ctrl-alt-shift-cmd-3 = [ 'summon-workspace 3', 'mode main' ]
-    ctrl-alt-shift-cmd-4 = [ 'summon-workspace 4', 'mode main' ]
-    ctrl-alt-shift-cmd-5 = [ 'summon-workspace 5', 'mode main' ]
-    ctrl-alt-shift-cmd-6 = [ 'summon-workspace 6', 'mode main' ]
-    ctrl-alt-shift-cmd-7 = [ 'summon-workspace 7', 'mode main' ]
-    ctrl-alt-shift-cmd-8 = [ 'summon-workspace 8', 'mode main' ]
-    ctrl-alt-shift-cmd-9 = [ 'summon-workspace 9', 'mode main' ]
-    ctrl-alt-shift-cmd-e = [ 'summon-workspace E', 'mode main' ]
-    ctrl-alt-shift-cmd-o = [ 'summon-workspace O', 'mode main' ]
-    ctrl-alt-shift-cmd-s = [ 'summon-workspace S', 'mode main' ]
-    ctrl-alt-shift-cmd-t = [ 'summon-workspace T', 'mode main' ]
+    shift-1 = [ 'summon-workspace 1', 'mode main' ]
+    shift-2 = [ 'summon-workspace 2', 'mode main' ]
+    shift-3 = [ 'summon-workspace 3', 'mode main' ]
+    shift-4 = [ 'summon-workspace 4', 'mode main' ]
+    shift-5 = [ 'summon-workspace 5', 'mode main' ]
+    shift-6 = [ 'summon-workspace 6', 'mode main' ]
+    shift-7 = [ 'summon-workspace 7', 'mode main' ]
+    shift-8 = [ 'summon-workspace 8', 'mode main' ]
+    shift-9 = [ 'summon-workspace 9', 'mode main' ]
+    shift-e = [ 'summon-workspace E', 'mode main' ]
+    shift-o = [ 'summon-workspace O', 'mode main' ]
+    shift-s = [ 'summon-workspace S', 'mode main' ]
+    shift-t = [ 'summon-workspace T', 'mode main' ]
 
 [[on-window-detected]]
 if.app-id = 'com.microsoft.Outlook'
