--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -11,7 +11,7 @@ background-blur-radius = 20
 unfocused-split-opacity = 0.7
 macos-option-as-alt = true
 
-theme = catppuccin-mocha 
+theme = catppuccin-mocha.conf
 
 keybind = ctrl+alt+super+shift+b=text:\x02
 custom-shader = ~/.config/ghostty/cursor_blaze.glsl
