--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -48,38 +48,41 @@ set -g status-position top
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @catppuccin_flavor 'mocha'
-set -g @catppuccin_window_status_style "custom"
+# set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark'
 
-set -g @catppuccin_window_left_separator "#[bg=default,fg=#{@thm_surface_0}]#[bg=#{@thm_surface_0},fg=#{@thm_fg}]"
-set -g @catppuccin_window_right_separator "#[bg=default,fg=#{@thm_surface_0}]"
-set -g @catppuccin_window_current_left_separator "#[bg=default,fg=#{@thm_mauve}]#[bg=#{@thm_mauve},fg=#{@thm_bg}]"
-set -g @catppuccin_window_flags "icon"
-set -g @catppuccin_window_flags_icon_last "" # -
-set -g @catppuccin_window_flags_icon_current "" # *
-set -g @catppuccin_window_number "#I "
-set -g @catppuccin_window_current_number "#I"
-# set -g @catppuccin_window_current_middle_separator "#[fg=#{@thm_mauve}]█"
-set -g @catppuccin_window_current_middle_separator " "
-set -g @catppuccin_window_current_right_separator "#[bg=default,fg=#{@thm_surface_1}]"
-set -g @catppuccin_status_background "none"
-set -g @catppuccin_window_text "#W : #{b:pane_current_path}"
-set -g @catppuccin_window_current_text " #W"
-set -g @catppuccin_status_right_separator "#[bg=default,fg=#{@thm_surface_0}] "
-run '~/.tmux/plugins/tmux/catppuccin.tmux'
+# set -g @plugin 'tmux-plugins/tmux-battery'
+# set -g @plugin 'tmux-plugins/tmux-cpu'
+# set -g @catppuccin_flavor 'mocha'
+# set -g @catppuccin_window_status_style "custom"
+
+# set -g @catppuccin_window_left_separator "#[bg=default,fg=#{@thm_surface_0}]#[bg=#{@thm_surface_0},fg=#{@thm_fg}]"
+# set -g @catppuccin_window_right_separator "#[bg=default,fg=#{@thm_surface_0}]"
+# set -g @catppuccin_window_current_left_separator "#[bg=default,fg=#{@thm_mauve}]#[bg=#{@thm_mauve},fg=#{@thm_bg}]"
+# set -g @catppuccin_window_flags "icon"
+# set -g @catppuccin_window_flags_icon_last "" # -
+# set -g @catppuccin_window_flags_icon_current "" # *
+# set -g @catppuccin_window_number "#I "
+# set -g @catppuccin_window_current_number "#I"
+# set -g @catppuccin_window_current_middle_separator " "
+# set -g @catppuccin_window_current_right_separator "#[bg=default,fg=#{@thm_surface_1}]"
+# set -g @catppuccin_status_background "none"
+# set -g @catppuccin_window_text "#W : #{b:pane_current_path}"
+# set -g @catppuccin_window_current_text " #W"
+# set -g @catppuccin_status_right_separator "#[bg=default,fg=#{@thm_surface_0}] "
+# run '~/.tmux/plugins/tmux/catppuccin.tmux'
 # Load catppuccin
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left "#{E:@catppuccin_status_session}"
-set -agF status-left ""
-set -gF status-right "#{@catppuccin_status_gitmux}"
-set -agF status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
+# set -g status-right-length 100
+# set -g status-left-length 100
+# set -g status-left "#{E:@catppuccin_status_session}"
+# set -agF status-left ""
+# set -gF status-right "#{@catppuccin_status_gitmux}"
+# set -agF status-right "#{E:@catppuccin_status_application}"
+# set -agF status-right "#{E:@catppuccin_status_cpu}"
+# set -agF status-right "#{E:@catppuccin_status_battery}"
 # set -g set-titles on
+
 # set -g @plugin "janoamaral/tokyo-night-tmux"
 # set -g @tokyo-night-tmux_theme storm
 # set -g @tokyo-night-tmux_transparent 1
