Move chezmoi /tmp so it doesn't flag security

--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -209,3 +209,6 @@ run = 'move-node-to-workspace O'
 if.app-id = 'com.tinyspeck.slackmacgap'
 run = 'move-node-to-workspace S'
 
+[[on-window-detected]]
+if.app-id = 'org.ferdium.ferdium-app'
+run = 'move-node-to-workspace S'
