--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -22,6 +22,8 @@ packages:
       - "tmux"
       - "yazi"
       - "nodejs"
+      - "git-delta"
+      - "less"
     cask:
       - "1password-cli"
     apt:
@@ -36,6 +38,9 @@ packages:
       - "zsh"
       - "tmux"
       - "nodejs"
+    deb:
+      - ghrepo: "dandavison/delta"
+        filename: "git-delta_"
     npm:
       - "pnpm"
       - "bun"
