Update .aerospace.toml Update .config/ghostty/config Update .config/nvim/lua/plugins/gruvbox.lua Update .config/nvim/lua/plugins/lualine.lua Update .config/nvim/lua/plugins/versionFixing.lua Add .config/zsh/nord-fzf.sh Update .tmux.conf Update .zshrc

--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -212,3 +212,7 @@ run = 'move-node-to-workspace S'
 [[on-window-detected]]
 if.app-id = 'org.ferdium.ferdium-app'
 run = 'move-node-to-workspace S'
+
+[[on-window-detected]]
+if.app-id = 'org.alacritty'
+run = 'layout floating'
