--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -12,7 +12,8 @@ background-blur-radius = 20
 unfocused-split-opacity = 0.7
 macos-option-as-alt = true
 
-theme = Gruvbox Dark
+# theme = Gruvbox Dark
+theme = Nord
 
 keybind = ctrl+alt+super+shift+b=text:\x02
 custom-shader = ~/.config/ghostty/cursor_blaze.glsl
