--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -49,8 +49,9 @@ set -g status-position top
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark'
+# set -g @plugin 'egel/tmux-gruvbox'
+# set -g @tmux-gruvbox 'dark'
+set -g @plugin "arcticicestudio/nord-tmux"
 
 # set -g @plugin 'tmux-plugins/tmux-battery'
 # set -g @plugin 'tmux-plugins/tmux-cpu'
