--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -16,8 +16,6 @@ after-startup-command = [
 start-at-login = true 
 
 # Normalizations. See: https://nikitabobko.github.io/AeroSpace/guide#normalization
-enable-normalization-flatten-containers = true
-enable-normalization-opposite-orientation-for-nested-containers = true
 
 # See: https://nikitabobko.github.io/AeroSpace/guide#layouts
 # The 'accordion-padding' specifies the size of accordion padding
@@ -37,13 +35,25 @@ default-root-container-orientation = 'auto'
 # See https://nikitabobko.github.io/AeroSpace/guide#on-focus-changed-callbacks
 # See https://nikitabobko.github.io/AeroSpace/commands#move-mouse
 # Fallback value (if you omit the key): on-focused-monitor-changed = []
-on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 
 # You can effectively turn off macOS "Hide application" (cmd-h) feature by toggling this flag
 # Useful if you don't use this macOS feature, but accidentally hit cmd-h or cmd-alt-h key
 # Also see: https://nikitabobko.github.io/AeroSpace/goodies#disable-hide-app
 automatically-unhide-macos-hidden-apps = false
+config-version = 2
 
+# In i3, all workspaces are phantom
+persistent-workspaces = []
+
+# i3 doesn't have "normalizations" feature that why we disable them here.
+# But the feature is very helpful.
+# Normalizations eliminate all sorts of weird tree configurations that don't make sense.
+# Give normalizations a chance and enable them back.
+enable-normalization-flatten-containers = true
+enable-normalization-opposite-orientation-for-nested-containers = true
+
+# Mouse follows focus when focused monitor changes
+on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 # Possible values: (qwerty|dvorak|colemak)
 # See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
 [key-mapping]
@@ -70,149 +80,113 @@ automatically-unhide-macos-hidden-apps = false
 # 'main' binding mode must be always presented
 # Fallback value (if you omit the key): mode.main.binding = {}
 [mode.main.binding]
-    ctrl-alt-shift-cmd-space = 'mode leader'
-    # See: https://nikitabobko.github.io/AeroSpace/commands#mode
-    ctrl-alt-shift-cmd-semicolon = 'mode service'
-    # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-    ctrl-alt-shift-cmd-h = 'focus left'
-    ctrl-alt-shift-cmd-j = 'focus down'
-    ctrl-alt-shift-cmd-k = 'focus up'
-    ctrl-alt-shift-cmd-l = 'focus right'
 
-    # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-    ctrl-alt-shift-cmd-1 = [ 'workspace 1', 'mode main' ] # Misc
-    ctrl-alt-shift-cmd-2 = [ 'workspace 2', 'mode main' ] # Terminal
-    ctrl-alt-shift-cmd-3 = [ 'workspace 3', 'mode main' ] # Browser
-    ctrl-alt-shift-cmd-4 = [ 'workspace 4', 'mode main' ] # Long term scratch
-    ctrl-alt-shift-cmd-5 = [ 'workspace 5', 'mode main' ]
-    ctrl-alt-shift-cmd-6 = [ 'workspace 6', 'mode main' ]
-    ctrl-alt-shift-cmd-7 = [ 'workspace 7', 'mode main' ]
-    ctrl-alt-shift-cmd-8 = [ 'workspace 8', 'mode main' ]
-    ctrl-alt-shift-cmd-9 = [ 'workspace 9', 'mode main' ]
-    ctrl-alt-shift-cmd-e = [ 'workspace E', 'mode main' ] # Email - Outlook/Thunderbird
-    ctrl-alt-shift-cmd-o = [ 'workspace O', 'mode main' ] # Obsidian
-    ctrl-alt-shift-cmd-s = [ 'workspace S', 'mode main' ] # Slack
-    ctrl-alt-shift-cmd-t = [ 'workspace T', 'mode main' ] # Teams
-    # All possible keys:
-    # - Letters.        a, b, c, ..., z
-    # - Numbers.        0, 1, 2, ..., 9
-    # - Keypad numbers. keypad0, keypad1, keypad2, ..., keypad9
-    # - F-keys.         f1, f2, ..., f20
-    # - Special keys.   minus, equal, period, comma, slash, backslash, quote, semicolon,
-    #                   backtick, leftSquareBracket, rightSquareBracket, space, enter, esc,
-    #                   backspace, tab, pageUp, pageDown, home, end, forwardDelete,
-    #                   sectionSign (ISO keyboards only, european keyboards only)
-    # - Keypad special. keypadClear, keypadDecimalMark, keypadDivide, keypadEnter, keypadEqual,
-    #                   keypadMinus, keypadMultiply, keypadPlus
-    # - Arrows.         left, down, up, right
+    # i3 wraps focus by default
+    alt-h =         'focus --boundaries-action wrap-around-the-workspace left'
+    alt-j =         'focus --boundaries-action wrap-around-the-workspace down'
+    alt-k =         'focus --boundaries-action wrap-around-the-workspace up'
+    alt-l =         'focus --boundaries-action wrap-around-the-workspace right'
 
-    # All possible modifiers: cmd, alt, ctrl, shift
+    alt-shift-j = 'move left'
+    alt-shift-k = 'move down'
+    alt-shift-l = 'move up'
+    alt-shift-semicolon = 'move right'
 
-    # All possible commands: https://nikitabobko.github.io/AeroSpace/commands
+    # Consider using 'join-with' command as a 'split' replacement if you want to enable
+    # normalizations
+    ctrl-alt-shift-h = 'join-with left'
+    ctrl-alt-shift-j = 'join-with down'
+    ctrl-alt-shift-k = 'join-with up'
+    ctrl-alt-shift-l = 'join-with right'
 
-    # See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
-    # You can uncomment the following lines to open up terminal with alt + enter shortcut
-    # (like in i3)
-    # alt-enter = '''exec-and-forget osascript -e '
-    # tell application "Terminal"
-    #     do script
-    #     activate
-    # end tell'
-    # '''
-[mode.leader.binding]
-    ctrl-alt-shift-cmd-space = 'mode main'
-    ctrl-alt-shift-cmd-semicolon = 'mode service'
-    # See: https://nikitabobko.github.io/AeroSpace/commands#layout
-    alt-slash = 'layout tiles horizontal vertical'
-    alt-comma = 'layout horizontal vertical'
+    alt-f = 'fullscreen'
 
-    # See: https://nikitabobko.github.io/AeroSpace/commands#move
-    alt-shift-h = 'move left'
-    alt-shift-j = 'move down'
-    alt-shift-k = 'move up'
-    alt-shift-l = 'move right'
+    alt-s = 'layout v_accordion' # 'layout stacking' in i3
+    alt-w = 'layout h_accordion' # 'layout tabbed' in i3
+    alt-e = 'layout tiles horizontal vertical' # 'layout toggle split' in i3
 
-    # See: https://nikitabobko.github.io/AeroSpace/commands#resize
-    minus = 'resize smart -50'
-    equal = 'resize smart +50'
+    alt-shift-space = 'layout floating tiling' # 'floating toggle' in i3
 
-    # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-    shift-1 = [ 'move-node-to-workspace 1', 'workspace 1', 'mode main' ]
-    shift-2 = [ 'move-node-to-workspace 2', 'workspace 2', 'mode main' ]
-    shift-3 = [ 'move-node-to-workspace 3', 'workspace 3', 'mode main' ]
-    shift-4 = [ 'move-node-to-workspace 4', 'workspace 4', 'mode main' ]
-    shift-5 = [ 'move-node-to-workspace 5', 'workspace 5', 'mode main' ]
-    shift-6 = [ 'move-node-to-workspace 6', 'workspace 6', 'mode main' ]
-    shift-7 = [ 'move-node-to-workspace 7', 'workspace 7', 'mode main' ]
-    shift-8 = [ 'move-node-to-workspace 8', 'workspace 8', 'mode main' ]
-    shift-9 = [ 'move-node-to-workspace 9', 'workspace 9', 'mode main' ]
-    shift-e = [ 'move-node-to-workspace E', 'workspace E', 'mode main' ]
-    shift-o = [ 'move-node-to-workspace O', 'workspace O', 'mode main' ]
-    shift-s = [ 'move-node-to-workspace S', 'workspace S', 'mode main' ]
-    shift-t = [ 'move-node-to-workspace T', 'workspace T', 'mode main' ]
+    # Not supported, because this command is redundant in AeroSpace mental model.
+    # See: https://nikitabobko.github.io/AeroSpace/guide#floating-windows
+    #alt-space = 'focus toggle_tiling_floating'
 
-    # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
-    alt-tab = 'workspace-back-and-forth'
-    # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
-    alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
+    # `focus parent`/`focus child` are not yet supported, and it's not clear whether they
+    # should be supported at all https://github.com/nikitabobko/AeroSpace/issues/5
+    # alt-a = 'focus parent'
 
-    alt-f = [ 'fullscreen', 'mode main' ]
-    z = ['fullscreen', 'mode main']
-    f = ['layout floating tiling', 'mode main']
+    alt-1 = 'workspace 1'
+    alt-2 = 'workspace 2'
+    alt-3 = 'workspace 3'
+    alt-4 = 'workspace 4'
+    alt-5 = 'workspace 5'
+    alt-6 = 'workspace 6'
+    alt-7 = 'workspace 7'
+    alt-8 = 'workspace 8'
+    alt-9 = 'workspace 9'
+    alt-0 = 'workspace 10'
 
-# 'service' binding mode declaration.
-# See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
-[mode.service.binding]
-    ctrl-alt-shift-cmd-semicolon = 'mode main'
-    ctrl-alt-shift-cmd-space = 'mode leader'
-    esc = ['reload-config', 'mode main']
-    r = ['flatten-workspace-tree', 'mode main'] # reset layout
-    f = ['layout floating tiling', 'mode main'] # Toggle between floating and tiling layout
-    backspace = ['close-all-windows-but-current', 'mode main']
+    alt-shift-1 = 'move-node-to-workspace 1'
+    alt-shift-2 = 'move-node-to-workspace 2'
+    alt-shift-3 = 'move-node-to-workspace 3'
+    alt-shift-4 = 'move-node-to-workspace 4'
+    alt-shift-5 = 'move-node-to-workspace 5'
+    alt-shift-6 = 'move-node-to-workspace 6'
+    alt-shift-7 = 'move-node-to-workspace 7'
+    alt-shift-8 = 'move-node-to-workspace 8'
+    alt-shift-9 = 'move-node-to-workspace 9'
+    alt-shift-0 = 'move-node-to-workspace 10'
 
-    # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
-    #s = ['layout sticky tiling', 'mode main']
+    ctrl-alt-shift-1 = [ 'summon-workspace 1', 'mode main' ]
+    ctrl-alt-shift-2 = [ 'summon-workspace 2', 'mode main' ]
+    ctrl-alt-shift-3 = [ 'summon-workspace 3', 'mode main' ]
+    ctrl-alt-shift-4 = [ 'summon-workspace 4', 'mode main' ]
+    ctrl-alt-shift-5 = [ 'summon-workspace 5', 'mode main' ]
+    ctrl-alt-shift-6 = [ 'summon-workspace 6', 'mode main' ]
+    ctrl-alt-shift-7 = [ 'summon-workspace 7', 'mode main' ]
+    ctrl-alt-shift-8 = [ 'summon-workspace 8', 'mode main' ]
+    ctrl-alt-shift-9 = [ 'summon-workspace 9', 'mode main' ]
 
-    alt-shift-h = ['join-with left', 'mode main']
-    alt-shift-j = ['join-with down', 'mode main']
-    alt-shift-k = ['join-with up', 'mode main']
-    alt-shift-l = ['join-with right', 'mode main']
+    alt-shift-c = 'reload-config'
 
-    shift-1 = [ 'summon-workspace 1', 'mode main' ]
-    shift-2 = [ 'summon-workspace 2', 'mode main' ]
-    shift-3 = [ 'summon-workspace 3', 'mode main' ]
-    shift-4 = [ 'summon-workspace 4', 'mode main' ]
-    shift-5 = [ 'summon-workspace 5', 'mode main' ]
-    shift-6 = [ 'summon-workspace 6', 'mode main' ]
-    shift-7 = [ 'summon-workspace 7', 'mode main' ]
-    shift-8 = [ 'summon-workspace 8', 'mode main' ]
-    shift-9 = [ 'summon-workspace 9', 'mode main' ]
-    shift-e = [ 'summon-workspace E', 'mode main' ]
-    shift-o = [ 'summon-workspace O', 'mode main' ]
-    shift-s = [ 'summon-workspace S', 'mode main' ]
-    shift-t = [ 'summon-workspace T', 'mode main' ]
+    alt-r = 'mode resize'
 
+[mode.resize.binding]
+    h = 'resize width -50'
+    j = 'resize height +50'
+    k = 'resize height -50'
+    l = 'resize width +50'
+    enter = 'mode main'
+    esc = 'mode main'
 
-[[on-window-detected]]
-if.app-id = 'com.microsoft.Outlook'
-run = 'move-node-to-workspace E'
-
-[[on-window-detected]]
-if.app-id = 'com.microsoft.teams2'
-run = 'move-node-to-workspace T'
-
-[[on-window-detected]]
-if.app-id = 'md.obsidian'
-run = 'move-node-to-workspace O'
-
-[[on-window-detected]]
-if.app-id = 'com.tinyspeck.slackmacgap'
-run = 'move-node-to-workspace S'
-
-[[on-window-detected]]
-if.app-id = 'org.ferdium.ferdium-app'
-run = 'move-node-to-workspace S'
+# [[on-window-detected]]
+# if.app-id = 'com.microsoft.Outlook'
+# run = 'move-node-to-workspace E'
+#
+# [[on-window-detected]]
+# if.app-id = 'com.microsoft.teams2'
+# run = 'move-node-to-workspace T'
+#
+# [[on-window-detected]]
+# if.app-id = 'md.obsidian'
+# run = 'move-node-to-workspace O'
+#
+# [[on-window-detected]]
+# if.app-id = 'com.tinyspeck.slackmacgap'
+# run = 'move-node-to-workspace S'
+#
+# [[on-window-detected]]
+# if.app-id = 'org.ferdium.ferdium-app'
+# run = 'move-node-to-workspace S'
 
 [[on-window-detected]]
 if.app-id = 'org.alacritty'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = 'com.1password.1password'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = 'org.pqrs.Karabiner-Elements.Settings'
 run = 'layout floating'
