Update .chezmoidata/packages.yaml Update .aerospace.toml Add .aerospace.toml.bak Add .w3m/keymap Add .w3m/w3msrc69839-0.html Add .w3m/w3msrc72154-0.html Add .w3m/w3msrc72346-0.html

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -53,6 +53,8 @@ packages:
       - "ripgrep"
       - "tldr"
       - "borders"
+      - "aerc"
+      - "w3m"
     cask:
       - "wezterm"
       - "obsidian"
@@ -74,6 +76,8 @@ packages:
       - "chafa"
       - "tldr"
       - "ripgrep"
+      - "aerc"
+      - "w3m"
     cask:
       - "font-fira-code-nerd-font"
       - "font-geist-mono-nerd-font"
