--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -82,10 +82,10 @@ on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 [mode.main.binding]
 
     # i3 wraps focus by default
-    alt-h =         'focus --boundaries-action wrap-around-the-workspace left'
-    alt-j =         'focus --boundaries-action wrap-around-the-workspace down'
-    alt-k =         'focus --boundaries-action wrap-around-the-workspace up'
-    alt-l =         'focus --boundaries-action wrap-around-the-workspace right'
+    ctrl-alt-h =         'focus --boundaries-action wrap-around-the-workspace left'
+    ctrl-alt-j =         'focus --boundaries-action wrap-around-the-workspace down'
+    ctrl-alt-k =         'focus --boundaries-action wrap-around-the-workspace up'
+    ctrl-alt-l =         'focus --boundaries-action wrap-around-the-workspace right'
 
     alt-shift-j = 'move left'
     alt-shift-k = 'move down'
