cleanup: clean up configs

--- a/dot_config/aerc/aerc.conf
+++ b/dot_config/aerc/aerc.conf
@@ -213,7 +213,7 @@
 # Enable mouse events in the ui, e.g. clicking and scrolling with the mousewheel
 #
 # Default: false
-#mouse-enabled=false
+mouse-enabled=true
 
 #
 # Ring the bell when new messages are received
@@ -342,7 +342,7 @@ styleset-name=Nord
 # consecutive characters in the command or option.
 #
 # Default: false
-#fuzzy-complete=false
+fuzzy-complete=true
 
 # How long to wait after the last input before auto-completion is triggered.
 #
@@ -632,7 +632,7 @@ styleset-name=Nord
 # Whether to always show the mimetype of an email, even when it is just a single part
 #
 # Default: false
-#always-show-mime=false
+always-show-mime=true
 
 # Define the maximum height of the mimetype switcher before a scrollbar is used.
 # The height of the mimetype switcher is restricted to half of the display
