feat: New font & change AI keybindings

--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,9 +1,10 @@
 
 # You can preview the config here
 # font-family = "Cascadia Code NF Regular Regular"
-font-family = VictorMono Nerd Font Mono
-font-size = 13
-font-feature = "+zero"
+# font-family = VictorMono Nerd Font Mono
+font-family = Maple Mono NF 
+font-size = 14
+font-feature = "+calt"
 quit-after-last-window-closed = true
 clipboard-read = allow
 clipboard-write = allow
