feat: add maple mono font to installed packages

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -63,6 +63,7 @@ packages:
       - "font-geist-mono-nerd-font"
       - "font-cascadia-code-nf"
       - "font-victor-mono-nerd-font"
+      - "font-maple-mono-nf"
       - "unnaturalscrollwheels"
       - "nikitabobko/tap/aerospace"
       - "ghostty"
@@ -83,6 +84,7 @@ packages:
       - "font-geist-mono-nerd-font"
       - "font-cascadia-code-nf"
       - "font-victor-mono-nerd-font"
+      - "font-maple-mono-nf"
       - "wezterm"
       - "obsidian"
       - "unnaturalscrollwheels"
